--- a/app/app/src/main/res/layout/activity_capital.xml
+++ b/app/app/src/main/res/layout/activity_capital.xml
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/capitalsModeButton"
+        android:id="@+id/flagsModeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -47,12 +47,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
-    <ImageView
-        android:id="@+id/flagImage"
-        android:layout_width="200dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center_horizontal"
-        android:contentDescription="@string/flag_image" />
+
+    <TextView
+        android:id="@+id/capitalName"
+        android:layout_width="match_parent"
+        android:layout_height="74dp"
+        android:layout_marginTop="32dp"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:textSize="24sp" />
 
     <View
         android:layout_width="match_parent"
